fix menu item z-index

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -86,7 +86,6 @@
       margin-left: -1px;
       left: 1px;
       position: relative;
-      z-index: 1;
     }
   }
 
